--- a/.travis.yml
+++ b/.travis.yml
@@ -23,17 +23,12 @@ script:
   # Export CXX to tell cmake which compiler to use
   - export CXX=${COMPILER}
   - export CPP_STANDARD=14
-  # Link clang and g++ to their standard commands
-  - ln -s /usr/bin/g++ /usr/local/bin/g++
-  - ln -s /usr/bin/g++ /usr/local/bin/g++
-
-  # Check versions of g++ and cmake
-  - g++ -v && cmake --version
+  # Check versions
+  - cmake --version
   # Run your build commands next
-
   - cd deploy
   - mkdir -p build
   - cd build
-  - cmake ../..
+  - cmake ../.. -DCMAKE_BUILD_TYPE=Debug
   - make
   - ./HyperBufferTest
