--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,6 @@
 dist: trusty
 language:
     - cpp
-common_sources: &all_sources
-    - ubuntu-toolchain-r-test
-    - llvm-toolchain-trusty
 matrix:
     include:
         - os: osx
@@ -14,11 +11,7 @@ matrix:
           
         - os: linux
           compiler: gcc
-          addons: &gcc8
-              apt:
-                sources: *all_sources
-                packages: ['g++-8']
-          env: COMPILER='g++-8'
+          env: COMPILER='g++'
          
 script:
     # Export CXX to tell cmake which compiler to use
