--- a/.travis.yml
+++ b/.travis.yml
@@ -13,16 +13,19 @@ matrix:
           compiler: gcc
           env: COMPILER='g++'
          
+before_script:
+        # Export CXX to tell cmake which compiler to use
+        - export CXX=${COMPILER}
+        - export CPP_STANDARD=14
+        # Check versions
+        - cmake --version
+        # Run your build commands next
+        - cd deploy
+        - mkdir -p build
+        - cd build
 script:
-    # Export CXX to tell cmake which compiler to use
-    - export CXX=${COMPILER}
-    - export CPP_STANDARD=14
-    # Check versions
-    - cmake --version
-    # Run your build commands next
-    - cd deploy
-    - mkdir -p build
-    - cd build
+
     - cmake ../.. -DCMAKE_BUILD_TYPE=Debug
-    - make
-    - ./HyperBufferTest
+    - make -j 2
+    #- ./HyperBufferTest
+    - ctest -V -j 2
