--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ before_script:
         - cd build
 script:
 
-    - cmake -j 2 ../.. -DCMAKE_BUILD_TYPE=Debug
+    - cmake -H. -j 2 ../.. -DCMAKE_BUILD_TYPE=Debug
     - make -j 2
     - ./HyperBufferTest -r xml
     
