cmake added source groups

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,6 @@ set(CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
 file(GLOB_RECURSE source "source/*.h*" "source/*.c*")
-
 set (LIB_NAME "${CMAKE_PROJECT_NAME}")
 
 # TEST TARGET
@@ -23,6 +22,18 @@ add_executable(${TEST_NAME} ${source} ${source_test})
 target_include_directories(${TEST_NAME} PRIVATE source)
 target_include_directories(${TEST_NAME} PRIVATE test)
 target_include_directories(${TEST_NAME} PRIVATE test/catch2)
+
+get_target_property(allsources ${TEST_NAME} SOURCES)
+foreach(_source IN ITEMS ${allsources})
+    if (IS_ABSOLUTE "${_source}")
+        file(RELATIVE_PATH _source_rel "${CMAKE_CURRENT_SOURCE_DIR}" "${_source}")
+    else()
+       set(_source_rel "${_source}")
+    endif()
+    get_filename_component(_source_path "${_source_rel}" PATH)
+    string(REPLACE "/" "\\" _source_path_msvc "${_source_path}")
+    source_group("${_source_path_msvc}" FILES "${_source}")
+endforeach()
 
 target_compile_options(${TEST_NAME} PRIVATE
     # clang/GCC warnings
