--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,21 @@ cmake_minimum_required(VERSION 3.9)
 #  ╠═╣└┬┘├─┘├┤ ├┬┘  ╠╩╗│ │├┤ ├┤ ├┤ ├┬┘
 #  ╩ ╩ ┴ ┴  └─┘┴└─  ╚═╝└─┘└  └  └─┘┴└─
 ###########################################################
+
+# Utillity
+# Recursively get all .h/.hpp header from the target's sources and assign their paths as include directories
+function(assign_include_dirs_from_sources _target)
+    get_target_property(_sources ${_target} SOURCES)
+    list(FILTER _sources INCLUDE REGEX .+\\.h.*$)
+    set(_include_dirs)
+    foreach(_headers IN ITEMS ${_sources})
+        get_filename_component(_header_path "${_headers}" PATH)
+        list(APPEND _include_dirs ${_header_path})
+    endforeach()
+    list(REMOVE_DUPLICATES _include_dirs)
+    target_include_directories(${_target} PRIVATE ${_include_dirs})
+endfunction()
+
 # MAIN
 project(HyperBuffer)
 
@@ -14,33 +29,25 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 
 # SOURCE TARGET
 file(GLOB_RECURSE source "source/*.h*" "source/*.c*")
+
 set (LIB_NAME "HyperBuffer")
 
 # TEST TARGET
 set (TEST_NAME "${LIB_NAME}Test")
 file(GLOB_RECURSE source_test "test/tests/*.c*" "test/tests/*.c*")
 add_executable(${TEST_NAME} ${source} ${source_test})
+assign_include_dirs_from_sources(${TEST_NAME})
 
+# Add external-utils
 target_sources(${TEST_NAME} PRIVATE "test/main.cpp")
-target_include_directories(${TEST_NAME} PUBLIC source)
-target_include_directories(${TEST_NAME} PRIVATE test)
 target_include_directories(${TEST_NAME} PRIVATE test/external-utils)
-target_include_directories(${TEST_NAME} PRIVATE test/external-utils/MemorySentinel/source)
 
+# Add Memory Sentinel
 add_subdirectory(test/external-utils/MemorySentinel)
+target_include_directories(${TEST_NAME} PRIVATE test/external-utils/MemorySentinel/source)
+target_link_libraries(${TEST_NAME} MemorySentinel)
 
-get_target_property(allsources ${TEST_NAME} SOURCES)
-foreach(_source IN ITEMS ${allsources})
-    if (IS_ABSOLUTE "${_source}")
-        file(RELATIVE_PATH _source_rel "${CMAKE_CURRENT_SOURCE_DIR}" "${_source}")
-    else()
-       set(_source_rel "${_source}")
-    endif()
-    get_filename_component(_source_path "${_source_rel}" PATH)
-    string(REPLACE "/" "\\" _source_path_msvc "${_source_path}")
-    source_group("${_source_path_msvc}" FILES "${_source}")
-endforeach()
-
+# Compiler Setitings
 target_compile_options(${TEST_NAME} PRIVATE
     # clang/GCC warnings
     $<$<OR:$<CXX_COMPILER_ID:Clang>,$<CXX_COMPILER_ID:GNU>>:
