--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ before_script:
     
 script:
     - make -j 2
-    #- ./HyperBufferTest
-    - ctest -V -j 2
+    - ./HyperBufferTest
+    #- ctest -V -j 2
 
     
