--- a/.travis.yml
+++ b/.travis.yml
@@ -33,8 +33,8 @@ before_script:
     - mkdir -p build
     - cd build
     - if [ "$TRAVIS_OS_NAME" != "windows" ]; then cmake -H. -j 2 ../.. -DCMAKE_BUILD_TYPE=Debug; fi
-    - if [ "$TRAVIS_OS_NAME" == "windows" ]; then cmake -G "Visual Studio 15 2017" -DCMAKE_GENERATOR_PLATFORM=x64; fi
-    
+    - if [ "$TRAVIS_OS_NAME" == "windows" ]; then cmake -G "Visual Studio 15 2017" -DCMAKE_GENERATOR_PLATFORM=x64 ..\..; fi
+
 script:
     - if [ "$TRAVIS_OS_NAME" != "windows" ]; then make -j 2; fi
     - if [ "$TRAVIS_OS_NAME" == "windows" ]; then cmd.exe /C ‘MSBuild.exe HyperBuffer.sln /m:2 /nologo /verbosity:minimal /p:Configuration=Debug /p:Platform=x64; fi
