--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,7 @@ before_script:
 
 script:
     - if [ "$TRAVIS_OS_NAME" != "windows" ]; then make -j 2; fi
-    - if [ "$TRAVIS_OS_NAME" == "windows" ]; then cmd.exe /C ‘MSBuild.exe HyperBuffer.sln /m:2 /nologo /verbosity:minimal /p:Configuration=Debug /p:Platform=x64; fi
+    - if [ "$TRAVIS_OS_NAME" == "windows" ]; then cmd.exe /C ‘MSBuild.exe HyperBuffer.sln /m:2 /nologo /verbosity:minimal /p:Configuration=Debug /p:Platform=x64‘; fi
     #- ./HyperBufferTest
     - ctest -V -j 2
 
