--- a/.travis.yml
+++ b/.travis.yml
@@ -36,9 +36,18 @@ before_script:
     - if [ "$TRAVIS_OS_NAME" == "windows" ]; then cmake -G "Visual Studio 15 2017" -DCMAKE_GENERATOR_PLATFORM=x64 ../..; fi
 
 script:
-    - if [ "$TRAVIS_OS_NAME" != "windows" ]; then make -j 2; fi
-    - cmd.exe /C 'MSBuild.exe HyperBuffer.sln /m:2 /nologo /verbosity:minimal /p:Configuration=Debug /p:Platform=x64'
-    #- ./HyperBufferTest
-    - ctest -V -j 2
+    - |
+    if [ "${TRAVIS_OS_NAME}" == "windows" ]; then
+        cmd.exe /C '"C:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\VC\Auxiliary\Build\vcvarsall.bat" amd64'
+        cmd.exe /C 'MSBuild.exe HyperBuffer.sln /m:2 /nologo /verbosity:minimal /p:Configuration=Debug /p:Platform=x64'
+        ./HyperBufferTest.exe
+    else
+        make -j 2
+        ctest -V -j 2
+        #- ./HyperBufferTest
+    fi
+    
+
+
 
     
