--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,6 @@ matrix:
           env: COMPILER='g++-7'
          
         - os: windows
-          compiler: vs2017-64
           env: MSBUILD_PATH="c:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\MSBuild\15.0\Bin"
           
 before_script:
@@ -34,14 +33,13 @@ before_script:
     - mkdir -p build
     - cd build
     - if [ "$TRAVIS_OS_NAME" != "windows" ]; then cmake -H. -j 2 ../.. -DCMAKE_BUILD_TYPE=Debug; fi
-    - if [ "$TRAVIS_OS_NAME" == "windows" ]; then cmake -G "Visual Studio 15 2017" -DCMAKE_GENERATOR_PLATFORM=x64 ../..; fi
-    - if [ "$TRAVIS_OS_NAME" == "windows" ]; then export PATH=$MSBUILD_PATH:$PATH; fi
+    - if [ "$TRAVIS_OS_NAME" == "windows" ]; then export PATH=$MSBUILD_PATH:$PATH; cmake -G "Visual Studio 15 2017" -DCMAKE_GENERATOR_PLATFORM=x64 ../..; fi
 
 script:
     - |
       if [ "${TRAVIS_OS_NAME}" == "windows" ]; then
           cmd.exe //C 'C:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\VC\Auxiliary\Build\vcvarsall.bat' amd64
-          cmd.exe //C "MSBuild.exe HyperBuffer.sln" //m:2 //nologo //verbosity:minimal //p:Configuration=Debug //p:Platform=x64
+          cmd.exe //C "MSBuild.exe HyperBuffer.sln" //m:2 //nologo //verbosity:quiet //p:Configuration=Debug //p:Platform=x64
           ./Debug/HyperBufferTest.exe
       else
           make -j 2
