Feature/windows build (#7)

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,9 @@ matrix:
                   packages: ['g++-7']
           env: COMPILER='g++-7'
          
+        - os: windows
+          env: MSBUILD_PATH="c:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\MSBuild\15.0\Bin"
+          
 before_script:
     # Export CXX to tell cmake which compiler to use
     - export CXX=${COMPILER}
@@ -29,11 +32,22 @@ before_script:
     - cd deploy
     - mkdir -p build
     - cd build
-    - cmake -H. -j 2 ../.. -DCMAKE_BUILD_TYPE=Debug
-    
+    - if [ "$TRAVIS_OS_NAME" != "windows" ]; then cmake -H. -j 2 ../.. -DCMAKE_BUILD_TYPE=Debug; fi
+    - if [ "$TRAVIS_OS_NAME" == "windows" ]; then export PATH=$MSBUILD_PATH:$PATH; cmake -G "Visual Studio 15 2017" -DCMAKE_GENERATOR_PLATFORM=x64 ../..; fi
+
 script:
-    - make -j 2
-    #- ./HyperBufferTest
-    - ctest -V -j 2
+    - |
+      if [ "${TRAVIS_OS_NAME}" == "windows" ]; then
+          cmd.exe //C 'C:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\VC\Auxiliary\Build\vcvarsall.bat' amd64
+          cmd.exe //C "MSBuild.exe HyperBuffer.sln" //m:2 //nologo //verbosity:quiet //p:Configuration=Debug //p:Platform=x64
+          ./Debug/HyperBufferTest.exe
+      else
+          make -j 2
+          ctest -V -j 2
+          #- ./HyperBufferTest
+      fi
+    
+
+
 
     
