proper sonar-scanner command

--- a/.travis.yml
+++ b/.travis.yml
@@ -53,4 +53,10 @@ script:
           #- ./HyperBufferTest
       fi
     # run sonar scanner on Linux only
-    - if [ "${TRAVIS_OS_NAME}" == "linux" ]; then sonar-scanner; fi
+    - if [ "${TRAVIS_OS_NAME}" == "linux" ]; then
+        # Wraps the compilation with the Build Wrapper to generate configuration (used
+        # later by the SonarScanner) into the "bw-output" folder
+        build-wrapper-linux-x86-64 --out-dir build_wrapper_output_directory make clean all
+        # And finally run the SonarCloud analysis - read the "sonar-project.properties" file to see the specific configuration
+        sonar-scanner -Dsonar.cfamily.build-wrapper-output=bw-output;
+    fi
