--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,7 +6,8 @@ sonar.organization=idelobe
 #sonar.projectVersion=1.0
  
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=./source
- 
+sonar.sources=./source
+sonar.language=cpp
+
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
