--- a/.travis.yml
+++ b/.travis.yml
@@ -50,7 +50,7 @@ script:
           ./Debug/HyperBufferTest.exe
       elif [ "${TRAVIS_OS_NAME}" == "linux" ]; then
           #cp ../../sonar-project.properties . # hack to get the build-wrapper to find the .properties file
-          build-wrapper-linux-x86-64 --out-dir build_wrapper_output_directory make -j 2  # Wraps the compilation with the Build Wrapper to generate configuration (used later by the SonarScanner) into the "bw-output" folder
+          build-wrapper-linux-x86-64 --out-dir bw-output make -j 2  # Wraps the compilation with the Build Wrapper to generate configuration (used later by the SonarScanner) into the "bw-output" folder
           ctest -V -j 2
           cd ../..
           sonar-scanner -Dsonar.cfamily.build-wrapper-output=deploy/build/bw-output;
