--- a/.travis.yml
+++ b/.travis.yml
@@ -51,8 +51,11 @@ script:
       elif [ "${TRAVIS_OS_NAME}" == "linux" ]; then
           build-wrapper-linux-x86-64 --out-dir bw-output make -j 2  # Wraps the compilation with the Build Wrapper to generate configuration (used later by the SonarScanner) into the "bw-output" folder
           ctest -V -j 2
-          cd ../..
-          sonar-scanner -Dsonar.cfamily.build-wrapper-output=deploy/build/bw-output;
+          cd ..
+          mkdir -p report
+          gcovr -r .. -f ../source --xml -o report/coverage.xml  # Generate coverage report in "Cobertura" format
+          cd ..
+          sonar-scanner -Dsonar.cfamily.build-wrapper-output=deploy/build/bw-output
       else
           make -j 2
           ctest -V -j 2
