--- a/.travis.yml
+++ b/.travis.yml
@@ -44,7 +44,15 @@ before_script:
     - cd build
     - if [ "$TRAVIS_OS_NAME" != "windows" ]; then cmake -H. -j 2 ../.. -DCMAKE_BUILD_TYPE=Debug; fi
     - if [ "$TRAVIS_OS_NAME" == "windows" ]; then export PATH=$MSBUILD_PATH:$PATH; cmake -G "Visual Studio 15 2017" -DCMAKE_GENERATOR_PLATFORM=x64 ../..; fi
-
+    
+    #update cmake
+    - |
+      if [ "${TRAVIS_OS_NAME}" == "linux" ]; then
+          CMAKE_URL="https://github.com/Kitware/CMake/releases/download/v3.17.1/cmake-3.17.1-Linux-x86_64.tar.gz"
+          mkdir cmake && travis_retry wget --quiet -O - ${CMAKE_URL} | tar --strip-components=1 -xz -C cmake
+          export PATH=${DEPS_DIR}/cmake/bin:${PATH}
+      fi
+      
 script:
     - |
       if [ "${TRAVIS_OS_NAME}" == "windows" ]; then
