--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,15 @@ matrix:
          
         - os: windows
           env: MSBUILD_PATH="c:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\MSBuild\15.0\Bin"
-          
+
+install:
+    #update cmake
+    - |
+      if [ "${TRAVIS_OS_NAME}" == "linux" ]; then
+          CMAKE_URL="https://github.com/Kitware/CMake/releases/download/v3.17.1/cmake-3.17.1-Linux-x86_64.tar.gz"
+          mkdir cmake && travis_retry wget --quiet -O - ${CMAKE_URL} | tar --strip-components=1 -xz -C cmake
+          export PATH=${DEPS_DIR}/cmake/bin:${PATH}
+      fi      
 
 before_script:
     # Export CXX to tell cmake which compiler to use
@@ -38,15 +46,6 @@ before_script:
     - export CPP_STANDARD=14
     # Check versions
     - cmake --version
-
-    #update cmake
-    - |
-      if [ "${TRAVIS_OS_NAME}" == "linux" ]; then
-          CMAKE_URL="https://github.com/Kitware/CMake/releases/download/v3.17.1/cmake-3.17.1-Linux-x86_64.tar.gz"
-          mkdir cmake && travis_retry wget --quiet -O - ${CMAKE_URL} | tar --strip-components=1 -xz -C cmake
-          export PATH=${DEPS_DIR}/cmake/bin:${PATH}
-      fi
-      
     # Run your build commands next
     - cd deploy
     - mkdir -p build
