--- a/.travis.yml
+++ b/.travis.yml
@@ -31,15 +31,24 @@ matrix:
         - os: windows
           env: MSBUILD_PATH="c:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\MSBuild\15.0\Bin"
 
-before_script:
-    #update cmake on linux bionic
-    - |
-      if [ "${TRAVIS_OS_NAME}" == "linux" ]; then
-          CMAKE_URL="https://github.com/Kitware/CMake/releases/download/v3.17.1/cmake-3.17.1-Linux-x86_64.tar.gz"
-          mkdir cmake && travis_retry wget --quiet -O - ${CMAKE_URL} | tar --strip-components=1 -xz -C cmake
-          export PATH=${DEPS_DIR}/cmake/bin:${PATH}
-          echo "Cmake Updated!"
-      fi     
+install:
+  - export DEPS_DIR="${HOME}/deps"
+  - mkdir -p ${DEPS_DIR} && cd ${DEPS_DIR}
+  - echo ${TRAVIS_OS_NAME}
+  - |
+    if [ "${TRAVIS_OS_NAME}" = "linux" ]; then
+      export CMAKE_URL="https://github.com/Kitware/CMake/releases/download/v3.17.0/cmake-3.17.0-Linux-x86_64.tar.gz";
+      mkdir cmake;
+      travis_retry wget --no-check-certificate -O - ${CMAKE_URL} | tar --strip-components=1 -xz -C cmake;
+      export PATH=${DEPS_DIR}/cmake/bin:${PATH};
+      echo ${PATH};
+      echo "Cmake Updated!"
+    else
+      brew install cmake || brew upgrade cmake;
+    fi
+  - cmake --version
+  
+before_script:    
     # Export CXX to tell cmake which compiler to use
     - export CXX=${COMPILER}
     - export CPP_STANDARD=14
@@ -58,7 +67,7 @@ script:
           cmd.exe //C 'C:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\VC\Auxiliary\Build\vcvarsall.bat' amd64
           cmd.exe //C "MSBuild.exe HyperBuffer.sln" //m:2 //nologo //verbosity:quiet //p:Configuration=Debug //p:Platform=x64
           ./Debug/HyperBufferTest.exe
-      elif [ "${TRAVIS_OS_NAME}" == "linux" ]; then
+      elif [ "${TRAVIS_OS_NAME}" == "osx" ]; then
           build-wrapper-linux-x86-64 --out-dir bw-output make -j 2  # Wraps the compilation with the Build Wrapper to generate configuration (used later by the SonarScanner) into the "bw-output" folder
           ctest -V -j 2
           cd ..
