--- a/.travis.yml
+++ b/.travis.yml
@@ -42,7 +42,7 @@ install:
       travis_retry wget --no-check-certificate -O - ${CMAKE_URL} | tar --strip-components=1 -xz -C cmake
       export PATH=${DEPS_DIR}/cmake/bin:${PATH}
       echo ${PATH}
-      echo "Cmake Updated!
+      echo "Cmake Updated!"
     else
       brew install cmake || brew upgrade cmake;
     fi
