--- a/.travis.yml
+++ b/.travis.yml
@@ -32,17 +32,18 @@ matrix:
           env: MSBUILD_PATH="c:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\MSBuild\15.0\Bin"
 
 install:
-  - export DEPS_DIR="${HOME}/deps"
-  - mkdir -p ${DEPS_DIR} && cd ${DEPS_DIR}
-  - echo ${TRAVIS_OS_NAME}
   - |
     if [ "${TRAVIS_OS_NAME}" == "linux" ]; then
       export CMAKE_URL="https://github.com/Kitware/CMake/releases/download/v3.17.0/cmake-3.17.0-Linux-x86_64.tar.gz"
+      export DEPS_DIR="${HOME}/deps"
+      mkdir -p ${DEPS_DIR} && cd ${DEPS_DIR}
+      echo ${TRAVIS_OS_NAME}
       mkdir cmake
       travis_retry wget --no-check-certificate -O - ${CMAKE_URL} | tar --strip-components=1 -xz -C cmake
       export PATH=${DEPS_DIR}/cmake/bin:${PATH}
       echo ${PATH}
       echo "Cmake Updated!"
+      cd ..
     elif [ "${TRAVIS_OS_NAME}" == "osx" ]; then
       brew install cmake || brew upgrade cmake;
     fi
