--- a/.travis.yml
+++ b/.travis.yml
@@ -68,7 +68,7 @@ script:
           cmd.exe //C 'C:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\VC\Auxiliary\Build\vcvarsall.bat' amd64
           cmd.exe //C "MSBuild.exe HyperBuffer.sln" //m:2 //nologo //verbosity:quiet //p:Configuration=Debug //p:Platform=x64
           ./Debug/HyperBufferTest.exe
-      elif [ "${TRAVIS_OS_NAME}" == "osx" ]; then
+      elif [ "${TRAVIS_OS_NAME}" == "linux" ]; then
           build-wrapper-linux-x86-64 --out-dir bw-output make -j 2  # Wraps the compilation with the Build Wrapper to generate configuration (used later by the SonarScanner) into the "bw-output" folder
           ctest -V -j 2
           cd ..
