--- a/.travis.yml
+++ b/.travis.yml
@@ -34,13 +34,10 @@ matrix:
 install:
   - |
     if [ "${TRAVIS_OS_NAME}" == "linux" ]; then
-      export CMAKE_URL="https://github.com/Kitware/CMake/releases/download/v3.17.0/cmake-3.17.0-Linux-x86_64.tar.gz"
-      export DEPS_DIR="${HOME}/deps"
-      echo ${TRAVIS_OS_NAME}
-      mkdir cmake
-      travis_retry wget --no-check-certificate -O - ${CMAKE_URL} | tar --strip-components=1 -xz -C cmake
-      export PATH=${DEPS_DIR}/cmake/bin:${PATH}
-      echo ${PATH}
+      CMAKE_INSTALLER=install-cmake.sh
+      curl -sSL https://github.com/Kitware/CMake/releases/download/v3.17.0/cmake-3.17.0-Linux-x86_64.sh -o ${CMAKE_INSTALLER}
+      chmod +x ${CMAKE_INSTALLER}
+      sudo ./${CMAKE_INSTALLER} --prefix=/usr/local --skip-license
       echo "Cmake Updated!"
     elif [ "${TRAVIS_OS_NAME}" == "osx" ]; then
       brew install cmake || brew upgrade cmake;
