--- a/.travis.yml
+++ b/.travis.yml
@@ -34,11 +34,9 @@ matrix:
 install:
   - |
     if [ "${TRAVIS_OS_NAME}" == "linux" ]; then
-      CMAKE_INSTALLER=install-cmake.sh
-      curl -sSL https://github.com/Kitware/CMake/releases/download/v3.17.0/cmake-3.17.0-Linux-x86_64.sh -o ${CMAKE_INSTALLER}
-      chmod +x ${CMAKE_INSTALLER}
-      sudo ./${CMAKE_INSTALLER} --prefix=/usr/local --skip-license
+      sudo apt-get install cmake
       echo "Cmake Updated!"
+      cmake --version
     elif [ "${TRAVIS_OS_NAME}" == "osx" ]; then
       brew install cmake || brew upgrade cmake;
     fi
