--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,3 +11,5 @@ sonar.language=cpp
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
+
+sonar.cxx.coverage.reportPath=deploy/report/coverage.xml
