--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,9 +4,13 @@ sonar.organization=idelobe
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=HyperBuffer
 #sonar.projectVersion=1.0
+
+sonar.cfamily.cache.enabled=false
  
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 sonar.sources=test/tests, source
+sonar.exclusions=test/tests/*
+ 
 sonar.language=cpp
 
 # Encoding of the source code. Default is default system encoding
