gcov report type for sonar

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,11 +9,10 @@ sonar.cfamily.cache.enabled=false
  
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 sonar.sources=test/tests, source
-sonar.exclusions=test/tests/*
- 
+
 sonar.language=cpp
 
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
 
-sonar.cxx.coverage.reportPath=deploy/report/coverage.xml
+sonar.cfamily.gcov.reportsPath==deploy/report/coverage.xml
