exclude tests from results

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,7 +9,7 @@ sonar.cfamily.cache.enabled=false
  
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 sonar.sources=test/tests, source
-
+sonar.coverage.exclusions=test/tests/*.cpp
 sonar.language=cpp
 
 # Encoding of the source code. Default is default system encoding
