--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,7 +9,9 @@ sonar.cfamily.cache.enabled=false
  
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 sonar.sources=test/tests, source
-sonar.coverage.exclusions=test/tests/*.cpp
+sonar.test.exclusions=test/**/*
+sonar.issue.ignore.allfile=test/**/*
+sonar.coverage.exclusions=test/**/*
 sonar.language=cpp
 
 # Encoding of the source code. Default is default system encoding
