--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,10 +11,12 @@ sonar.sources=test/tests, source
 sonar.test.exclusions=test/**/*
 sonar.issue.ignore.allfile=test/**/*
 sonar.coverage.exclusions=test/**/*
+sonar.exclusions=test/**/*
 sonar.language=cpp
 
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
 
 sonar.cfamily.cache.enabled=false
+sonar.cfamily.build-wrapper-output=deploy/build/bw-output
 sonar.cfamily.gcov.reportsPath=deploy/report/coverage.xml
