--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,17 +5,17 @@ sonar.organization=idelobe
 #sonar.projectName=HyperBuffer
 #sonar.projectVersion=1.0
 
+sonar.language=cpp
+
+# Config of C++ plugin
+sonar.cfamily.cache.enabled=false
+sonar.cfamily.build-wrapper-output=deploy/build/bw-output
+sonar.cfamily.gcov.reportsPath=deploy/report/coverage.xml
+
+# Encoding of the source code. Default is default system encoding
+sonar.sourceEncoding=UTF-8
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 sonar.sources=test/tests, source
 sonar.test.exclusions=test/**/*
 sonar.coverage.exclusions=test/**/*
-sonar.exclusions=test/**/*
-sonar.language=cpp
-
-# Encoding of the source code. Default is default system encoding
-sonar.sourceEncoding=UTF-8
-
-sonar.cfamily.cache.enabled=false
-sonar.cfamily.build-wrapper-output=deploy/build/bw-output
-sonar.cfamily.gcov.reportsPath=deploy/report/coverage.xml
