coverage report in sonarqube format

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,7 +10,9 @@ sonar.language=cpp
 # Config of C++ plugin
 sonar.cfamily.cache.enabled=false
 sonar.cfamily.build-wrapper-output=deploy/build/bw-output
-sonar.cfamily.gcov.reportsPath=deploy/report/coverage.xml
+
+# Coverage Report
+sonar.coverageReportPaths=deploy/report/coverage.xml
 
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
