--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,7 +12,8 @@ sonar.cfamily.cache.enabled=false
 sonar.cfamily.build-wrapper-output=deploy/build/bw-output
 
 # Coverage Report
-sonar.coverageReportPaths=deploy/report/coverage.xml
+#sonar.coverageReportPaths=deploy/report/coverage.xml
+sonar.coverageReportPaths=source
 
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
