keep gcov files

--- a/.travis.yml
+++ b/.travis.yml
@@ -71,17 +71,7 @@ script:
           ctest -V -j 2
           cd ..
           mkdir -p report
-          
-          cd report
-          find -name '*.cpp' -exec cp -t . {} +
-          find -name '*.gcno' -exec cp -t . {} +
-          find -name '*.gcda' -exec cp -t . {} +
-          find -name '*.cpp' -exec gcov -bf {} \;
-          pwd
-          ls
-          cd ..
-          
-          #gcovr -r .. -f ../source --sonarqube -o report/coverage.xml  # Generate coverage report
+          gcovr -r .. -f ../source -k --xml -o report/coverage.xml  # Generate coverage report, -k keeps the .gcov files
           cd ..
           sonar-scanner
       else
