--- a/.travis.yml
+++ b/.travis.yml
@@ -71,7 +71,7 @@ script:
           ctest -V -j 4
           cd ..
           mkdir -p report
-          gcovr -r .. -f ../source -k --xml -o report/coverage.xml  # Generate coverage report, -k keeps the .gcov files
+          gcovr -r .. -f ../source --sonarqube -o report/coverage.xml  # Generate coverage report
           cd ..
           sonar-scanner
       else
