--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,8 +12,8 @@ sonar.cfamily.cache.enabled=false
 sonar.cfamily.build-wrapper-output=deploy/build/bw-output
 
 # Coverage Report
-#sonar.coverageReportPaths=deploy/report/coverage.xml
-sonar.cfamily.gcov.reportsPath=deploy/report, source
+sonar.coverageReportPaths=deploy/report
+#sonar.cfamily.gcov.reportsPath=deploy/report, source
 
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
