--- a/.travis.yml
+++ b/.travis.yml
@@ -71,7 +71,7 @@ script:
           ctest -V -j 4
           cd ..
           mkdir -p report
-          gcovr -r .. -f ../source --xml-pretty -o report/coverage.xml  # Generate coverage report
+          gcovr -r .. -f ../source --sonarqube -o report/coverage.xml  # Generate coverage report
           cd ..
           sonar-scanner
       else
