--- a/.travis.yml
+++ b/.travis.yml
@@ -38,12 +38,12 @@ install:
       export DEPS_DIR=$PWD
       echo ${TRAVIS_OS_NAME}
       mkdir cmake
-      travis_retry wget --no-check-certificate -O - ${CMAKE_URL} | tar --strip-components=1 -xz -C cmake
+      travis_retry wget --quiet --no-check-certificate -O - ${CMAKE_URL} | tar --strip-components=1 -xz -C cmake
       export PATH=${DEPS_DIR}/cmake/bin:${PATH}
       echo ${PATH}
       echo "Cmake Updated!"
 
-      pip install gcovr
+      pip3 install gcovr
       echo "Gcovr Updated!"
       gcovr --version
     elif [ "${TRAVIS_OS_NAME}" == "osx" ]; then
