--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ matrix:
         - os: linux
           dist: bionic
           compiler: gcc
+          python: 3.8 
           
           addons:
               apt:
