--- a/.travis.yml
+++ b/.travis.yml
@@ -77,6 +77,7 @@ script:
           mkdir -p report
           gcovr --version
           gcovr -r .. -f ../source --sonarqube -o report/coverage.xml  # Generate coverage report
+          gcovr -r .. -f ../source
           cd ..
           sonar-scanner
       else
