--- a/.travis.yml
+++ b/.travis.yml
@@ -44,7 +44,7 @@ install:
       echo ${PATH}
       echo "Cmake Updated!"
     fi
-    if [$COV == "yes"]; then
+    if ["$COV" == "yes"]; then
       pip3 install gcovr
       echo "Gcovr Updated!"
       gcovr --version
@@ -71,7 +71,7 @@ script:
           cmd.exe //C 'C:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\VC\Auxiliary\Build\vcvarsall.bat' amd64
           cmd.exe //C "MSBuild.exe HyperBuffer.sln" //m:2 //nologo //verbosity:quiet //p:Configuration=Debug //p:Platform=x64
           ./Debug/HyperBufferTest.exe
-      elif [ "${TRAVIS_OS_NAME}" == "osx" ] && [ $COV == "yes" ]; then
+      elif [ "${TRAVIS_OS_NAME}" == "osx" ] && [ "$COV" == "yes" ]; then
           build-wrapper-macosx-x86 --out-dir bw-output make -j 4  # Wraps the compilation with the Build Wrapper to generate configuration (used later by the SonarScanner) into the "bw-output" folder
           ctest -V -j 4 # run the tests
           cd ..
